--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     
     <div class="agent-section">
-      <img src="img/ELIE.png" alt="Agent Photo" class="agent-photo">
+      <img src="img/elie.jpeg" alt="Agent Photo" class="agent-photo">
       <h3 class="agent-name">ELIE IBRAHEEM</h3>
       <p class="agent-role">Sales Manager</p>
       <p class="agent-registration"><span class="registration-symbol">®</span> Rise Properties RERA ORN NO. 29323</p>
